--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <service android:enabled="true" android:name=".MyService"></service>
         <activity
             android:name=".Tracking_Activity"
             android:label="@string/title_activity_tracking_"></activity>
